# trainingpeaks-mcp

./: .dockerignore  CONTRIBUTORS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: PROGRESS.md
src/tp_mcp/: cli.py  server.py
src/tp_mcp/auth/: keyring.py  validator.py
src/tp_mcp/client/: __init__.py  http.py  models.py
src/tp_mcp/tools/: __init__.py  _validation.py  analyze.py  atp.py  equipment.py  events.py  fitness.py  library.py  metrics.py  peaks.py  profile.py  settings.py  structure.py  weekly_summary.py  workout_files.py  workout_types.py  workouts.py
tests/: conftest.py  test_server_functional.py
tests/test_auth/: test_validator.py
tests/test_client/: test_http.py  test_models.py
tests/test_tools/: test_analyze.py  test_atp_and_summary.py  test_equipment.py  test_events.py  test_fitness.py  test_library.py  test_metrics.py  test_new_workouts.py  test_peaks.py  test_refresh_auth_security.py  test_settings.py  test_structure.py  test_validation.py  test_workout_types.py  test_workouts.py
