[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tp-mcp"
version = "2.0.0"
description = "TrainingPeaks MCP Server - AI assistant integration for TrainingPeaks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "James" }
]
keywords = ["trainingpeaks", "mcp", "ai", "training", "cycling", "running"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/JamsusMaximus/trainingpeaks-mcp"
Repository = "https://github.com/JamsusMaximus/trainingpeaks-mcp"
Issues = "https://github.com/JamsusMaximus/trainingpeaks-mcp/issues"

[project.optional-dependencies]
browser = [
    "browser-cookie3>=0.19.0",
]
http = [
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
tp-mcp = "tp_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tp_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disable_error_code = ["union-attr", "no-any-return", "arg-type", "no-untyped-call", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
